test/ui/invalid_export.stderr
error: invalid rust_export item
  ┌─ test/ui/invalid_export.cc:3:5
  │
3 │ ╭     struct FooBar
4 │ │     {
5 │ │     };
  │ ╰─────^ only using declarations are allowed here

error: invalid rust_export item
  ┌─ test/ui/invalid_export.cc:7:5
  │
7 │     int baz;
  │     ^^^^^^^ only using declarations are allowed here
