test/ui/invalid_export.cc
namespace rust_export
{
    struct FooBar
    {
    };

    int baz;
} // namespace rust_export
